--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rdtrrealtime",
+  "homepage": "http://localhost/app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
