Add login page and change basename to rdtrrealtime

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdtrrealtime",
-  "homepage": "http://localhost/app/",
+  "homepage": "http://localhost/rdtrrealtime/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
