--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "ckeditor5-custom-build": "file:ckeditor5",
     "esri-loader": "^3.0.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
