--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "ckeditor5-custom-build": "file:ckeditor5",
     "esri-loader": "^3.0.0",
+    "js-cookie": "^3.0.1",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "querystring": "^0.2.1",
