--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "querystring": "^0.2.1",
+    "rc-tree": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
